--- a/config/sync/core.entity_form_display.paragraph.vih_course_slot.default.yml
+++ b/config/sync/core.entity_form_display.paragraph.vih_course_slot.default.yml
@@ -46,6 +46,9 @@ content:
     third_party_settings: {  }
     type: boolean_checkbox
     region: content
+  translation:
+    weight: 10
+    region: content
 hidden:
   created: true
   status: true
