--- a/config/sync/core.entity_form_display.user.user.default.yml
+++ b/config/sync/core.entity_form_display.user.user.default.yml
@@ -35,28 +35,26 @@ third_party_settings:
         - field_vih_user_job_title
         - field_vih_user_name_first
         - field_vih_user_name_last
-        - field_vih_user_birthday
-        - field_vih_user_descr
-        - field_vih_user_qualifications
-        - field_vih_user_phone
-        - field_vih_user_email
         - field_vih_user_type_id
       parent_name: ''
-      weight: 2
+      weight: 1
       format_type: tab
       format_settings:
-        id: ''
-        classes: ''
-        formatter: closed
+        label: Bruger
+        formatter: open
         description: ''
         required_fields: true
+        id: ''
+        classes: ''
       label: Bruger
       region: content
     group_content:
       children:
+        - field_vih_user_descr
+        - field_vih_user_qualifications
         - field_vih_user_paragraphs
       parent_name: ''
-      weight: 3
+      weight: 2
       format_type: tab
       format_settings:
         id: ''
@@ -66,15 +64,12 @@ third_party_settings:
         required_fields: true
       label: Indhold
       region: content
-    group_other:
+    group_banner:
       children:
-        - account
-        - contact
-        - langcode
-        - language
-        - translation
+        - field_vih_top_banner
+        - field_vih_user_title
       parent_name: ''
-      weight: 5
+      weight: 0
       format_type: tab
       format_settings:
         id: ''
@@ -82,7 +77,42 @@ third_party_settings:
         formatter: closed
         description: ''
         required_fields: true
-      label: Andet
+      label: Banner
+      region: content
+    group_user_information:
+      children:
+        - account
+        - field_vih_user_birthday
+        - langcode
+        - language
+        - translation
+        - path
+      parent_name: ''
+      weight: 4
+      format_type: tab
+      format_settings:
+        id: ''
+        classes: ''
+        formatter: closed
+        description: ''
+        required_fields: true
+      label: 'User information'
+      region: content
+    group_contact_information:
+      children:
+        - contact
+        - field_vih_user_phone
+        - field_vih_user_email
+      parent_name: ''
+      weight: 3
+      format_type: tab
+      format_settings:
+        id: ''
+        classes: ''
+        formatter: closed
+        description: ''
+        required_fields: true
+      label: 'Contact information'
       region: content
 id: user.user.default
 targetEntityType: user
@@ -115,7 +145,7 @@ content:
     third_party_settings: {  }
   field_vih_user_birthday:
     type: datetime_default
-    weight: 16
+    weight: 5
     region: content
     settings: {  }
     third_party_settings: {  }
@@ -129,7 +159,7 @@ content:
     third_party_settings: {  }
   field_vih_user_email:
     type: email_default
-    weight: 20
+    weight: 7
     region: content
     settings:
       size: 60
@@ -161,7 +191,7 @@ content:
     third_party_settings: {  }
   field_vih_user_paragraphs:
     type: paragraphs
-    weight: 4
+    weight: 19
     region: content
     settings:
       title: Paragraph
@@ -175,7 +205,7 @@ content:
     third_party_settings: {  }
   field_vih_user_phone:
     type: string_textfield
-    weight: 19
+    weight: 6
     region: content
     settings:
       size: 60
@@ -228,7 +258,7 @@ content:
     third_party_settings: {  }
   path:
     type: path
-    weight: 6
+    weight: 9
     region: content
     settings: {  }
     third_party_settings: {  }
