--- a/config/sync/core.entity_view_display.paragraph.vih_ordered_course_person.email_teaser.yml
+++ b/config/sync/core.entity_view_display.paragraph.vih_ordered_course_person.email_teaser.yml
@@ -63,6 +63,7 @@ hidden:
   field_vih_ocp_birthdate: true
   field_vih_ocp_city: true
   field_vih_ocp_comment: true
+  field_vih_ocp_country: true
   field_vih_ocp_municipality: true
   field_vih_ocp_newsletter: true
   field_vih_ocp_zip: true
