--- a/config/sync/block.block.sidefodkontaktinformation.yml
+++ b/config/sync/block.block.sidefodkontaktinformation.yml
@@ -16,7 +16,7 @@ provider: null
 plugin: 'block_content:d63076f5-44b5-4794-8ee2-ecf377288021'
 settings:
   id: 'block_content:d63076f5-44b5-4794-8ee2-ecf377288021'
-  label: 'Sidefod - kontakt information'
+  label: Kontaktinformation
   provider: block_content
   label_display: visible
   status: true
