--- a/config/sync/core.entity_form_display.media.image.default.yml
+++ b/config/sync/core.entity_form_display.media.image.default.yml
@@ -10,7 +10,6 @@ dependencies:
   module:
     - focal_point
     - lightning_media
-    - path
     - workbench_moderation
 _core:
   default_config_hash: kyoAHlZTGIuGTaQuBblGBk8EhfnVKOl19_0j5WbpQqM
@@ -21,7 +20,7 @@ mode: default
 content:
   field_media_in_library:
     type: boolean_checkbox
-    weight: 4
+    weight: 2
     settings:
       display_label: true
     third_party_settings: {  }
@@ -39,34 +38,17 @@ content:
         file_links: true
         remove_button: true
     region: content
-  langcode:
-    type: language_select
-    weight: 2
-    region: content
-    settings:
-      include_locked: true
-    third_party_settings: {  }
   name:
     type: string_textfield
-    weight: 3
+    weight: 1
     settings:
       size: 60
       placeholder: ''
     third_party_settings: {  }
     region: content
-  path:
-    type: path
-    weight: 30
-    region: content
-    settings: {  }
-    third_party_settings: {  }
-  status:
-    type: boolean_checkbox
-    settings:
-      display_label: true
-    weight: 100
-    region: content
-    third_party_settings: {  }
 hidden:
   created: true
+  langcode: true
+  path: true
+  status: true
   uid: true
