--- a/config/sync/core.entity_form_display.paragraph.article.default.yml
+++ b/config/sync/core.entity_form_display.paragraph.article.default.yml
@@ -23,7 +23,7 @@ third_party_settings:
         - field_vih_background_img
         - field_vih_background_color
       parent_name: ''
-      weight: 4
+      weight: 3
       format_type: tab
       format_settings:
         id: ''
@@ -67,7 +67,7 @@ content:
     type: string_textfield
     region: content
   field_vih_link:
-    weight: 3
+    weight: 2
     settings:
       placeholder_url: ''
       placeholder_title: ''
@@ -76,7 +76,7 @@ content:
     region: content
   field_vih_paragraphs_body:
     type: text_textarea
-    weight: 2
+    weight: 1
     region: content
     settings:
       rows: 5
@@ -85,4 +85,5 @@ content:
 hidden:
   created: true
   status: true
+  translation: true
   uid: true
