--- a/config/sync/core.entity_form_display.paragraph.employee.default.yml
+++ b/config/sync/core.entity_form_display.paragraph.employee.default.yml
@@ -19,10 +19,10 @@ third_party_settings:
   field_group:
     group_appearance:
       children:
-        - field_vih_background_img
         - field_vih_background_color
+        - field_vih_background_img
       parent_name: ''
-      weight: 4
+      weight: 3
       format_type: tab
       format_settings:
         id: ''
@@ -45,7 +45,7 @@ content:
     region: content
   field_vih_background_img:
     type: entity_browser_entity_reference
-    weight: 6
+    weight: 8
     settings:
       entity_browser: media_browser
       field_widget_display: rendered_entity
@@ -66,7 +66,7 @@ content:
     type: string_textfield
     region: content
   field_vih_link:
-    weight: 3
+    weight: 2
     settings:
       placeholder_url: ''
       placeholder_title: ''
@@ -75,7 +75,7 @@ content:
     region: content
   field_vih_user_type_id:
     type: entity_reference_autocomplete
-    weight: 2
+    weight: 1
     region: content
     settings:
       match_operator: CONTAINS
@@ -85,4 +85,5 @@ content:
 hidden:
   created: true
   status: true
+  translation: true
   uid: true
