--- a/config/sync/core.entity_form_display.paragraph.file.default.yml
+++ b/config/sync/core.entity_form_display.paragraph.file.default.yml
@@ -25,7 +25,7 @@ third_party_settings:
         - field_vih_background_img
         - field_vih_background_color
       parent_name: ''
-      weight: 5
+      weight: 4
       format_type: tab
       format_settings:
         id: ''
@@ -61,7 +61,7 @@ content:
     region: content
     third_party_settings: {  }
   field_vih_description:
-    weight: 2
+    weight: 1
     settings:
       rows: 5
       placeholder: ''
@@ -77,7 +77,7 @@ content:
     type: string_textfield
     region: content
   field_vih_link:
-    weight: 4
+    weight: 3
     settings:
       placeholder_url: ''
       placeholder_title: ''
@@ -86,7 +86,7 @@ content:
     region: content
   file:
     type: file_generic
-    weight: 3
+    weight: 2
     region: content
     settings:
       progress_indicator: throbber
@@ -94,4 +94,5 @@ content:
 hidden:
   created: true
   status: true
+  translation: true
   uid: true
