--- a/config/sync/core.entity_form_display.paragraph.list_of_news_teasers.default.yml
+++ b/config/sync/core.entity_form_display.paragraph.list_of_news_teasers.default.yml
@@ -20,7 +20,7 @@ third_party_settings:
         - field_vih_background_img
         - field_vih_background_color
       parent_name: ''
-      weight: 3
+      weight: 2
       format_type: tab
       format_settings:
         id: ''
@@ -65,11 +65,12 @@ content:
     region: content
   field_vih_tags:
     type: options_select
-    weight: 2
+    weight: 1
     region: content
     settings: {  }
     third_party_settings: {  }
 hidden:
   created: true
   status: true
+  translation: true
   uid: true
