--- a/config/sync/core.entity_form_display.paragraph.short_course_list_.default.yml
+++ b/config/sync/core.entity_form_display.paragraph.short_course_list_.default.yml
@@ -20,8 +20,8 @@ third_party_settings:
   field_group:
     group_appearance:
       children:
-        - field_vih_background_img
         - field_vih_background_color
+        - field_vih_background_img
       parent_name: ''
       weight: 4
       format_type: tab
@@ -39,14 +39,14 @@ bundle: short_course_list_
 mode: default
 content:
   field_vih_background_color:
-    weight: 8
+    weight: 9
     settings: {  }
     third_party_settings: {  }
     type: options_select
     region: content
   field_vih_background_img:
     type: entity_browser_entity_reference
-    weight: 7
+    weight: 10
     settings:
       entity_browser: media_browser
       field_widget_display: rendered_entity
@@ -60,7 +60,7 @@ content:
     third_party_settings: {  }
   field_vih_course_id:
     type: entity_reference_autocomplete
-    weight: 2
+    weight: 1
     region: content
     settings:
       match_operator: CONTAINS
@@ -68,7 +68,7 @@ content:
       placeholder: ''
     third_party_settings: {  }
   field_vih_empty_message:
-    weight: 11
+    weight: 2
     settings:
       rows: 5
       placeholder: ''
@@ -91,10 +91,8 @@ content:
     third_party_settings: {  }
     type: link_default
     region: content
-  translation:
-    weight: 10
-    region: content
 hidden:
   created: true
   status: true
+  translation: true
   uid: true
