--- a/config/sync/site.settings.yml
+++ b/config/sync/site.settings.yml
@@ -5,7 +5,7 @@ schemas:
 favicon:
   mimetype: image/vnd.microsoft.icon
   path: profiles/contrib/lightning/favicon.ico
-  url: 'http://vih.test/themes/custom/site/favicon.ico'
+  url: 'http://vih.bellcom.dk/themes/custom/site/favicon.ico'
   use_default: 1
 features:
   comment_user_picture: true
@@ -36,3 +36,38 @@ table: ''
 general_startup_year: '2011'
 cdn_provider: ''
 button_iconize: 0
+contact_url: '4'
+tour_url: '5'
+business_owner_name: 'Vejle Idrætshøjskole'
+business_startup_year: '1942'
+address: 'Ørnebjergvej 28'
+zipcode: '7100'
+city: Vejle
+phone_system: '+4575820811'
+phone_readable: '+45 7582 0811'
+email: kontor@vih.dk
+working_hours: 8.00-15.00
+facebook: 1
+facebook_url: 'http://twitter.com/vihdk'
+facebook_tooltip: ''
+twitter: 1
+twitter_url: 'http://twitter.com/vihdk'
+twitter_tooltip: ''
+googleplus: 0
+googleplus_url: ''
+googleplus_tooltip: ''
+instagram: 1
+instagram_url: 'http://twitter.com/vihdk'
+instagram_tooltip: ''
+linkedin: 0
+linkedin_url: ''
+linkedin_tooltip: ''
+pinterest: 0
+pinterest_url: ''
+pinterest_tooltip: ''
+vimeo: 0
+vimeo_url: ''
+vimeo_tooltip: ''
+youtube: 0
+youtube_url: ''
+youtube_tooltip: ''
