--- a/config/sync/webform.webform.bestil_rundvisning.yml
+++ b/config/sync/webform.webform.bestil_rundvisning.yml
@@ -1,15 +1,16 @@
+uuid: 7735357e-fb2f-4a6e-b49d-5e0ee99fba18
 langcode: da
 status: open
 dependencies: {  }
 open: null
 close: null
-uid: 1
+uid: 2
 template: false
-id: webform
-title: 'Webform Example'
+id: bestil_rundvisning
+title: 'Bestil rundvisning'
 description: ''
 category: ''
-elements: "text_field:\n  '#type': textfield\n  '#title': 'Text field'\n  '#title_display': invisible\n  '#placeholder': Name\ncheckbox:\n  '#type': checkbox\n  '#title': Checkbox\nselect:\n  '#type': webform_select_other\n  '#title': Select\n  '#options':\n    Choice1: Choice1\n    Choice2: Choice2\nmessage:\n  '#type': textarea\n  '#title': Message\n  '#title_display': invisible\n  '#placeholder': Message\n"
+elements: "mine_kontaktoplysninger:\n  '#type': fieldset\n  '#title': 'Mine kontaktoplysninger'\n  navn:\n    '#type': textfield\n    '#title': Navn\n  e_mail:\n    '#type': email\n    '#title': E-mail\n  telefon:\n    '#type': tel\n    '#title': Telefon\n    '#international': true\n    '#international_initial_country': DK\nmine_informationer:\n  '#type': fieldset\n  '#title': 'Mine informationer'\n  hvornar_vil_du_gerne_vises_rundt_:\n    '#type': textfield\n    '#title': 'Hvornår vil du gerne vises rundt?'\n    '#description': 'Skriv gerne et par forslag til datoer. Du f&aring;r det bedste indtryk af skolen, hvis du har mulighed for at komme forbi i dagtimerne.'\n  hvornar_er_du_interesseret_i_at_starte_:\n    '#type': textfield\n    '#title': 'Hvornår er du interesseret i at starte?'\n  hvad_er_dine_idraetsinteresser_:\n    '#type': textarea\n    '#title': 'Hvad er dine idrætsinteresser?'\n  har_du_sporgsmal_til_vores_lange_kurser_:\n    '#type': textfield\n    '#title': 'Har du spørgsmål til vores lange kurser?'\n  hvordan_horte_du_forste_gang_om_vih_:\n    '#type': textfield\n    '#title': 'Hvordan hørte du første gang om VIH?'\nactions:\n  '#type': webform_actions\n  '#title': 'Submit button(s)'\n  '#submit__label': 'Book min rundvisning'\n"
 css: ''
 javascript: ''
 settings:
@@ -128,4 +129,3 @@ access:
     users: {  }
     permissions: {  }
 handlers: {  }
-uuid: 4c62d5eb-514d-40c7-a2b1-55d35fe12be3
