--- a/config/sync/core.entity_form_display.paragraph.list_of_news_teasers.default.yml
+++ b/config/sync/core.entity_form_display.paragraph.list_of_news_teasers.default.yml
@@ -7,11 +7,13 @@ dependencies:
     - field.field.paragraph.list_of_news_teasers.field_vih_background_color
     - field.field.paragraph.list_of_news_teasers.field_vih_background_img
     - field.field.paragraph.list_of_news_teasers.field_vih_heading
+    - field.field.paragraph.list_of_news_teasers.field_vih_link
     - field.field.paragraph.list_of_news_teasers.field_vih_tags
     - paragraphs.paragraphs_type.list_of_news_teasers
   module:
     - entity_browser
     - field_group
+    - link
     - workbench_moderation
 third_party_settings:
   field_group:
@@ -20,7 +22,7 @@ third_party_settings:
         - field_vih_background_img
         - field_vih_background_color
       parent_name: ''
-      weight: 2
+      weight: 3
       format_type: tab
       format_settings:
         id: ''
@@ -62,6 +64,14 @@ content:
       placeholder: ''
     third_party_settings: {  }
     type: string_textfield
+    region: content
+  field_vih_link:
+    weight: 2
+    settings:
+      placeholder_url: ''
+      placeholder_title: ''
+    third_party_settings: {  }
+    type: link_default
     region: content
   field_vih_tags:
     type: options_select
