--- a/config/sync/field.storage.user.field_vih_top_banner_text.yml
+++ b/config/sync/field.storage.user.field_vih_top_banner_text.yml
@@ -1,11 +1,11 @@
-uuid: 036f3500-6786-497f-8380-952e642ee1cc
+uuid: 8177874c-e95d-44b9-86ce-370766d62832
 langcode: da
 status: true
 dependencies:
   module:
     - user
-id: user.field_vih_user_title
-field_name: field_vih_user_title
+id: user.field_vih_top_banner_text
+field_name: field_vih_top_banner_text
 entity_type: user
 type: string
 settings:
