--- a/config/sync/views.view.vih_search.yml
+++ b/config/sync/views.view.vih_search.yml
@@ -3,7 +3,6 @@ langcode: da
 status: true
 dependencies:
   config:
-    - field.storage.user.field_vih_user_title
     - search_api.index.vih_search_index
   module:
     - search_api
@@ -74,75 +73,6 @@ display:
           separator: ''
           hide_empty: false
       fields:
-        field_vih_user_title:
-          id: field_vih_user_title
-          table: search_api_datasource_vih_search_index_entity_user
-          field: field_vih_user_title
-          relationship: none
-          group_type: group
-          admin_label: ''
-          label: ''
-          exclude: false
-          alter:
-            alter_text: false
-            text: ''
-            make_link: false
-            path: ''
-            absolute: false
-            external: false
-            replace_spaces: false
-            path_case: none
-            trim_whitespace: false
-            alt: ''
-            rel: ''
-            link_class: ''
-            prefix: ''
-            suffix: ''
-            target: ''
-            nl2br: false
-            max_length: 0
-            word_boundary: true
-            ellipsis: true
-            more_link: false
-            more_link_text: ''
-            more_link_path: ''
-            strip_tags: false
-            trim: false
-            preserve_tags: ''
-            html: false
-          element_type: ''
-          element_class: ''
-          element_label_type: ''
-          element_label_class: ''
-          element_label_colon: false
-          element_wrapper_type: ''
-          element_wrapper_class: ''
-          element_default_classes: true
-          empty: ''
-          hide_empty: false
-          empty_zero: false
-          hide_alter_empty: true
-          click_sort_column: value
-          type: string
-          settings:
-            link_to_entity: true
-          group_column: value
-          group_columns: {  }
-          group_rows: true
-          delta_limit: 0
-          delta_offset: 0
-          delta_reversed: false
-          delta_first_last: false
-          multi_type: separator
-          separator: ', '
-          field_api_classes: false
-          field_rendering: true
-          fallback_handler: search_api
-          fallback_options:
-            link_to_item: false
-            multi_separator: ', '
-          entity_type: user
-          plugin_id: search_api_field
         title:
           id: title
           table: search_api_datasource_vih_search_index_entity_node
@@ -368,8 +298,7 @@ display:
         - 'languages:language_interface'
         - url
         - url.query_args
-      tags:
-        - 'config:field.storage.user.field_vih_user_title'
+      tags: {  }
   page:
     display_plugin: page
     id: page
@@ -385,5 +314,4 @@ display:
         - 'languages:language_interface'
         - url
         - url.query_args
-      tags:
-        - 'config:field.storage.user.field_vih_user_title'
+      tags: {  }
