--- a/config/sync/core.entity_view_display.taxonomy_term.vih_class_package.default.yml
+++ b/config/sync/core.entity_view_display.taxonomy_term.vih_class_package.default.yml
@@ -7,14 +7,13 @@ dependencies:
     - field.field.taxonomy_term.vih_class_package.field_short_description
     - field.field.taxonomy_term.vih_class_package.field_vih_class_package_color
     - field.field.taxonomy_term.vih_class_package.field_vih_cp_image
-    - field.field.taxonomy_term.vih_class_package.field_vih_heading
     - field.field.taxonomy_term.vih_class_package.field_vih_paragraphs
     - field.field.taxonomy_term.vih_class_package.field_vih_subheading
     - field.field.taxonomy_term.vih_class_package.field_vih_top_banner
+    - field.field.taxonomy_term.vih_class_package.field_vih_top_banner_text
     - taxonomy.vocabulary.vih_class_package
   module:
     - entity_reference_revisions
-    - metatag
     - panelizer
     - text
 third_party_settings:
@@ -30,35 +29,13 @@ mode: default
 content:
   description:
     type: text_default
-    weight: 3
+    weight: 2
     region: content
     label: hidden
     settings: {  }
     third_party_settings: {  }
-  field_metatag:
-    weight: 7
-    label: above
-    settings: {  }
-    third_party_settings: {  }
-    type: metatag_empty_formatter
-    region: content
-  field_short_description:
-    weight: 9
-    label: above
-    settings: {  }
-    third_party_settings: {  }
-    type: basic_string
-    region: content
-  field_vih_heading:
-    weight: 1
-    label: hidden
-    settings:
-      link_to_entity: false
-    third_party_settings: {  }
-    type: string
-    region: content
   field_vih_paragraphs:
-    weight: 6
+    weight: 3
     label: hidden
     settings:
       view_mode: default
@@ -67,7 +44,7 @@ content:
     type: entity_reference_revisions_entity_view
     region: content
   field_vih_subheading:
-    weight: 2
+    weight: 1
     label: hidden
     settings:
       link_to_entity: false
@@ -75,14 +52,25 @@ content:
     type: string
     region: content
   field_vih_top_banner:
-    weight: 8
-    label: above
+    weight: 4
+    label: hidden
     settings:
       link: true
+      view_mode: default
     third_party_settings: {  }
-    type: entity_reference_label
+    type: entity_reference_entity_view
+    region: content
+  field_vih_top_banner_text:
+    weight: 5
+    label: hidden
+    settings:
+      link_to_entity: false
+    third_party_settings: {  }
+    type: string
     region: content
 hidden:
+  field_metatag: true
+  field_short_description: true
   field_vih_class_package_color: true
   field_vih_cp_image: true
   langcode: true
