--- a/config/sync/core.entity_view_display.taxonomy_term.vih_class_package.teaser.yml
+++ b/config/sync/core.entity_view_display.taxonomy_term.vih_class_package.teaser.yml
@@ -8,10 +8,10 @@ dependencies:
     - field.field.taxonomy_term.vih_class_package.field_short_description
     - field.field.taxonomy_term.vih_class_package.field_vih_class_package_color
     - field.field.taxonomy_term.vih_class_package.field_vih_cp_image
-    - field.field.taxonomy_term.vih_class_package.field_vih_heading
     - field.field.taxonomy_term.vih_class_package.field_vih_paragraphs
     - field.field.taxonomy_term.vih_class_package.field_vih_subheading
     - field.field.taxonomy_term.vih_class_package.field_vih_top_banner
+    - field.field.taxonomy_term.vih_class_package.field_vih_top_banner_text
     - image.style.class_packages_frontpage
     - taxonomy.vocabulary.vih_class_package
   module:
@@ -55,8 +55,8 @@ content:
 hidden:
   description: true
   field_metatag: true
-  field_vih_heading: true
   field_vih_paragraphs: true
   field_vih_subheading: true
   field_vih_top_banner: true
+  field_vih_top_banner_text: true
   langcode: true
