--- a/config/sync/core.entity_form_display.block_content.banner.default.yml
+++ b/config/sync/core.entity_form_display.block_content.banner.default.yml
@@ -4,38 +4,28 @@ status: true
 dependencies:
   config:
     - block_content.type.banner
-    - entity_browser.browser.image_browser
-    - field.field.block_content.banner.field_vih_image
-    - field.field.block_content.banner.field_vih_link
+    - field.field.block_content.banner.field_vih_banner_slides
   module:
-    - entity_browser
-    - link
+    - paragraphs
     - workbench_moderation
 id: block_content.banner.default
 targetEntityType: block_content
 bundle: banner
 mode: default
 content:
-  field_vih_image:
-    type: entity_browser_file
-    weight: 2
+  field_vih_banner_slides:
+    type: paragraphs
+    weight: 1
     settings:
-      entity_browser: image_browser
-      field_widget_edit: true
-      field_widget_remove: true
-      view_mode: default
-      preview_image_style: thumbnail
-      open: true
-      selection_mode: selection_append
-    region: content
+      title: Paragraph
+      title_plural: Paragraphs
+      edit_mode: open
+      closed_mode: summary
+      autocollapse: none
+      add_mode: button
+      form_display_mode: default
+      default_paragraph_type: vih_banner_slide
     third_party_settings: {  }
-  field_vih_link:
-    weight: 3
-    settings:
-      placeholder_url: ''
-      placeholder_title: ''
-    third_party_settings: {  }
-    type: link_default
     region: content
   info:
     type: string_textfield
