--- a/config/sync/block.block.udlevdrommenpavih.yml
+++ b/config/sync/block.block.udlevdrommenpavih.yml
@@ -1,6 +1,6 @@
 uuid: 4b63d2a5-e6ed-4637-95a3-8b326f3f334f
 langcode: da
-status: true
+status: false
 dependencies:
   content:
     - 'block_content:banner:2f1d4f57-5b70-4e4d-8d0c-8e1c1af45078'
