--- a/config/sync/block.block.views_block__banner_slideshow_block_1.yml
+++ b/config/sync/block.block.views_block__banner_slideshow_block_1.yml
@@ -18,7 +18,7 @@ settings:
   id: 'views_block:banner_slideshow-block_1'
   label: ''
   provider: views
-  label_display: visible
+  label_display: '0'
   views_label: ''
   items_per_page: none
 visibility: {  }
