Config changes on live sync.

--- a/config/sync/core.entity_view_display.user.user.compact.yml
+++ b/config/sync/core.entity_view_display.user.user.compact.yml
@@ -77,6 +77,7 @@ content:
 hidden:
   field_banner: true
   field_vih_top_banner: true
+  field_vih_top_banner_text: true
   field_vih_user_birthday: true
   field_vih_user_email: true
   field_vih_user_job_title: true
