--- a/config/sync/core.entity_view_display.user.user.teaser.yml
+++ b/config/sync/core.entity_view_display.user.user.teaser.yml
@@ -82,6 +82,7 @@ content:
     third_party_settings: {  }
 hidden:
   field_vih_top_banner: true
+  field_vih_top_banner_text: true
   field_vih_user_birthday: true
   field_vih_user_descr: true
   field_vih_user_paragraphs: true
