--- a/config/sync/webform.webform.bestil_rundvisning.yml
+++ b/config/sync/webform.webform.bestil_rundvisning.yml
@@ -8,7 +8,7 @@ uid: 2
 template: false
 id: bestil_rundvisning
 title: 'Bestil rundvisning'
-description: ''
+description: 'Used to order a guided tour for Danish students.'
 category: ''
 elements: "mine_kontaktoplysninger:\n  '#type': fieldset\n  '#title': 'Mine kontaktoplysninger'\n  navn:\n    '#type': textfield\n    '#title': Navn\n  e_mail:\n    '#type': email\n    '#title': E-mail\n  telefon:\n    '#type': tel\n    '#title': Telefon\n    '#international': true\n    '#international_initial_country': DK\nmine_informationer:\n  '#type': fieldset\n  '#title': 'Mine informationer'\n  hvornar_vil_du_gerne_vises_rundt_:\n    '#type': textfield\n    '#title': 'Hvornår vil du gerne vises rundt?'\n    '#description': 'Skriv gerne et par forslag til datoer. Du f&aring;r det bedste indtryk af skolen, hvis du har mulighed for at komme forbi i dagtimerne.'\n  hvornar_er_du_interesseret_i_at_starte_:\n    '#type': textfield\n    '#title': 'Hvornår er du interesseret i at starte?'\n  hvad_er_dine_idraetsinteresser_:\n    '#type': textarea\n    '#title': 'Hvad er dine idrætsinteresser?'\n  har_du_sporgsmal_til_vores_lange_kurser_:\n    '#type': textfield\n    '#title': 'Har du spørgsmål til vores lange kurser?'\n  hvordan_horte_du_forste_gang_om_vih_:\n    '#type': textfield\n    '#title': 'Hvordan hørte du første gang om VIH?'\nactions:\n  '#type': webform_actions\n  '#title': 'Submit button(s)'\n  '#submit__label': 'Book min rundvisning'\n"
 css: ''
