--- a/config/sync/mailchimp.settings.yml
+++ b/config/sync/mailchimp.settings.yml
@@ -1,4 +1,4 @@
-api_key: c87ac71c165e655eb7d56b7c03f6b44c-us16
+api_key: 421216b291d0c5fcaddba733ab2e67be-us2
 cron: false
 batch_limit: 100
 api_classname: Mailchimp\Mailchimp
@@ -6,3 +6,6 @@ test_mode: false
 _core:
   default_config_hash: x8k6uOqmSHPqpp71jYGxHF3_SAs3U-Pha3YCntQIhPU
 langcode: da
+enable_connected: false
+connected_id: null
+connected_paths: null
