--- a/config/sync/core.entity_form_display.node.vih_long_cource.default.yml
+++ b/config/sync/core.entity_form_display.node.vih_long_cource.default.yml
@@ -4,7 +4,6 @@ status: true
 dependencies:
   config:
     - entity_browser.browser.image_browser
-    - entity_browser.browser.media_browser
     - field.field.node.vih_long_cource.body
     - field.field.node.vih_long_cource.field_metatag
     - field.field.node.vih_long_cource.field_vih_cource_contact_person
@@ -231,14 +230,14 @@ content:
     type: entity_browser_entity_reference
     weight: 2
     settings:
-      entity_browser: media_browser
+      entity_browser: image_browser
       field_widget_display: rendered_entity
       field_widget_edit: true
       field_widget_remove: true
+      open: true
       selection_mode: selection_append
       field_widget_display_settings:
         view_mode: thumbnail
-      open: true
     region: content
     third_party_settings: {  }
   langcode:
