--- a/config/sync/views.view.long_courses.yml
+++ b/config/sync/views.view.long_courses.yml
@@ -537,25 +537,32 @@ display:
           entity_field: langcode
           plugin_id: language
       sorts:
-        created:
-          id: created
-          table: node_field_data
-          field: created
-          order: DESC
-          entity_type: node
-          entity_field: created
-          plugin_id: date
-          relationship: none
+        field_vih_cp_start_date_value:
+          id: field_vih_cp_start_date_value
+          table: node__field_vih_cp_start_date
+          field: field_vih_cp_start_date_value
+          relationship: field_vih_course_periods
           group_type: group
           admin_label: ''
+          order: ASC
           exposed: false
           expose:
             label: ''
           granularity: second
+          plugin_id: datetime
       header: {  }
       footer: {  }
       empty: {  }
-      relationships: {  }
+      relationships:
+        field_vih_course_periods:
+          id: field_vih_course_periods
+          table: node__field_vih_course_periods
+          field: field_vih_course_periods
+          relationship: none
+          group_type: group
+          admin_label: 'field_vih_course_periods: Content'
+          required: true
+          plugin_id: standard
       arguments: {  }
       display_extenders: {  }
       css_class: ''
