--- a/config/sync/views.view.short_courses.yml
+++ b/config/sync/views.view.short_courses.yml
@@ -601,21 +601,32 @@ display:
           entity_field: langcode
           plugin_id: language
       sorts:
-        created:
-          id: created
-          table: node_field_data
-          field: created
-          order: DESC
-          entity_type: node
-          entity_field: created
-          plugin_id: date
+        field_vih_sc_start_date_value:
+          id: field_vih_sc_start_date_value
+          table: node__field_vih_sc_start_date
+          field: field_vih_sc_start_date_value
           relationship: none
           group_type: group
           admin_label: ''
+          order: ASC
           exposed: false
           expose:
             label: ''
           granularity: second
+          plugin_id: datetime
+        field_vih_cp_end_date_value:
+          id: field_vih_cp_end_date_value
+          table: node__field_vih_cp_end_date
+          field: field_vih_cp_end_date_value
+          relationship: none
+          group_type: group
+          admin_label: ''
+          order: ASC
+          exposed: false
+          expose:
+            label: ''
+          granularity: second
+          plugin_id: datetime
       header: {  }
       footer: {  }
       empty: {  }
@@ -721,7 +732,7 @@ display:
         arguments: false
         filters: false
         filter_groups: false
-        sorts: false
+        sorts: true
       pager:
         type: some
         options:
@@ -864,22 +875,6 @@ display:
         operator: AND
         groups:
           1: AND
-      sorts:
-        created:
-          id: created
-          table: node_field_data
-          field: created
-          order: DESC
-          entity_type: node
-          entity_field: created
-          plugin_id: date
-          relationship: none
-          group_type: group
-          admin_label: ''
-          exposed: false
-          expose:
-            label: ''
-          granularity: second
     cache_metadata:
       max-age: -1
       contexts:
