VI-374 Mediabrowser pager instead of 'Load more'.

--- a/config/sync/views.view.media.yml
+++ b/config/sync/views.view.media.yml
@@ -13,7 +13,6 @@ dependencies:
     - media
     - system
     - user
-    - views_infinite_scroll
 _core:
   default_config_hash: '-q24ItFnGZ_VzC81AjnWyuzS-enfH7uGYBz7Pe2kLP4'
 id: media
@@ -1180,7 +1179,7 @@ display:
           content: 'There are no media items to display.'
           plugin_id: text_custom
       pager:
-        type: infinite_scroll
+        type: full
         options:
           items_per_page: 12
           offset: 0
@@ -1189,6 +1188,8 @@ display:
           tags:
             previous: '‹ Previous'
             next: 'Next ›'
+            first: '« First'
+            last: 'Last »'
           expose:
             items_per_page: false
             items_per_page_label: 'Items per page'
@@ -1197,9 +1198,7 @@ display:
             items_per_page_options_all_label: '- All -'
             offset: false
             offset_label: Offset
-          views_infinite_scroll:
-            button_text: 'Load More'
-            automatically_load_content: false
+          quantity: 9
       display_description: ''
       css_class: eb-media
       arguments:
@@ -1603,7 +1602,7 @@ display:
           content: 'There are no images to display.'
           plugin_id: text_custom
       pager:
-        type: infinite_scroll
+        type: full
         options:
           items_per_page: 12
           offset: 0
@@ -1612,6 +1611,8 @@ display:
           tags:
             previous: '‹ Previous'
             next: 'Next ›'
+            first: '« First'
+            last: 'Last »'
           expose:
             items_per_page: false
             items_per_page_label: 'Items per page'
@@ -1620,9 +1621,7 @@ display:
             items_per_page_options_all_label: '- All -'
             offset: false
             offset_label: Offset
-          views_infinite_scroll:
-            button_text: 'Load More'
-            automatically_load_content: false
+          quantity: 9
       display_description: ''
       css_class: eb-media
       relationships:
